--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "build:web": "tsc && vite build",
     "build": "tsc && vite build && electron-builder",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && electron-builder --win --config",
-    "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config"
+    "build:win": "pnpm run build && electron-builder --win --config",
+    "build:mac": "pnpm run build && electron-builder --mac --config",
+    "build:linux": "pnpm run build && electron-builder --linux --config"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/tilt-neon": "^5.0.3",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "electron-store": "^8.1.0",
@@ -28,14 +30,14 @@
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "^4.0.4",
-    "electron": "^26.1.0",
+    "electron": "^27.0.2",
     "electron-builder": "^24.6.4",
     "eslint": "^8.48.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
-    "vite-plugin-electron": "^0.14.0",
+    "vite-plugin-electron": "^0.14.1",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vite-tsconfig-paths": "^4.2.1"
   },
