--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "tdb-gui",
   "private": true,
   "version": "0.0.0",
+  "repository": {
+    "url": "https://github.com/tobsdb/tdb-gui"
+  },
   "scripts": {
-    "dev": "vite",
+    "dev": "pnpm tdb & vite",
     "build:web": "tsc && vite build",
     "build": "tsc && vite build && electron-builder",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "postinstall": "electron-builder install-app-deps",
-    "build:win": "pnpm run build && electron-builder --win --config",
-    "build:mac": "pnpm run build && electron-builder --mac --config",
-    "build:linux": "pnpm run build && electron-builder --linux --config",
+    "build:win": "pnpm run build && electron-builder --win",
+    "build:mac": "pnpm run build && electron-builder --mac",
+    "build:linux": "pnpm run build && electron-builder --linux",
+    "build:platform": "pnpm run build && electron-builder --publish always",
     "tdb": "tdb -u user -p pass -log -dbg -db ./db.tdb"
   },
   "dependencies": {
